--- a/.github/workflows/pr-reviewer.yml
+++ b/.github/workflows/pr-reviewer.yml
@@ -27,6 +27,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Generate App Token
+        id: app-token
+        uses: actions/create-github-app-token@v1
+        with:
+          app-id: ${{ secrets.PR_REVIEWER_APP_ID }}
+          private-key: ${{ secrets.PR_REVIEWER_PRIVATE_KEY }}
+
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
@@ -34,7 +41,7 @@ jobs:
 
       - name: Checkout PR head
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ steps.app-token.outputs.token }}
           PR_SHA_DIRECT: ${{ github.event.pull_request.head.sha }}
         run: |
           if [ -n "$PR_SHA_DIRECT" ]; then
@@ -53,7 +60,7 @@ jobs:
       - name: Get PR diff
         if: github.event_name == 'pull_request'
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ steps.app-token.outputs.token }}
         run: |
           gh pr diff ${{ github.event.pull_request.number }} > pr-diff.txt
           echo "PR_NUMBER=${{ github.event.pull_request.number }}" >> $GITHUB_ENV
@@ -62,7 +69,7 @@ jobs:
       - name: Get PR info for comment
         if: github.event_name != 'pull_request'
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ steps.app-token.outputs.token }}
         run: |
           PR_NUMBER=${{ github.event.issue.number }}
           gh pr diff $PR_NUMBER > pr-diff.txt
@@ -116,7 +123,7 @@ jobs:
       - name: Post review with inline comments
         if: github.event_name == 'pull_request'
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ steps.app-token.outputs.token }}
         run: |
           if [ ! -s review-output.json ]; then
             echo "No review output generated"
@@ -291,7 +298,7 @@ jobs:
       - name: Post response comment
         if: github.event_name != 'pull_request' && steps.check-bot.outputs.is_bot != 'true'
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ steps.app-token.outputs.token }}
         run: |
           if [ -s response-output.md ]; then
             # Check if agent decided no response is needed
