--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "test:mcp": "tsx src/test/mcp-harness.ts",
     "cli": "tsx src/test/cli.ts",
     "debug:search": "tsx src/test/debug-search.ts",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "lint": "eslint src/",
+    "lint:fix": "eslint src/ --fix"
   },
   "keywords": [
     "mcp",
@@ -50,9 +52,12 @@
     "zod": "^3.22.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
     "@types/node": "^20.10.0",
+    "eslint": "^9.39.2",
     "tsx": "^4.7.0",
     "typescript": "^5.3.0",
+    "typescript-eslint": "^8.53.1",
     "vitest": "^4.0.18"
   }
 }
