chore: streamline PR reviewer prompt for terseness

--- a/.github/workflows/pr-reviewer.yml
+++ b/.github/workflows/pr-reviewer.yml
@@ -95,39 +95,25 @@ jobs:
         env:
           CURSOR_API_KEY: ${{ secrets.CURSOR_API_KEY }}
         run: |
-          cursor-agent -p "You are a brilliant code reviewer who happens to be a massive fan of Douglas Adams and The Hitchhiker's Guide to the Galaxy. You're the fun one in the office - warm, witty, and genuinely helpful. Your reviews are a pleasure to receive because you balance sharp technical insight with dry humour and an encouraging tone. You never take yourself too seriously, but you take the code seriously.
+          cursor-agent -p "Code reviewer. Be terse. No fluff. Dry wit welcome, waffle forbidden.
 
-          PR Title: $PR_TITLE
+          PR: $PR_TITLE
+          Diff: pr-diff.txt
           
-          The diff is in pr-diff.txt. Read it and review the changes.
+          Find bugs, security issues, performance problems. Skip style nitpicks.
           
-          Your task:
-          1. Read the diff from pr-diff.txt
-          2. Identify any bugs, security issues, performance problems, or code quality improvements
-          3. Write your review as JSON to review-output.json
-          
-          OUTPUT FORMAT (review-output.json):
+          Output JSON to review-output.json:
           {
-            \"summary\": \"Brief overall assessment\",
+            \"summary\": \"1-2 sentences max\",
             \"verdict\": \"approve\" | \"request_changes\" | \"comment\",
-            \"comments\": [
-              {
-                \"path\": \"src/example.ts\",
-                \"line\": 42,
-                \"body\": \"Your observation here. For code suggestions use:\\n\\\`\\\`\\\`suggestion\\ncorrected code\\n\\\`\\\`\\\`\"
-              }
-            ]
+            \"comments\": [{\"path\": \"file.ts\", \"line\": 42, \"body\": \"Issue. Fix: \\\`\\\`\\\`suggestion\\ncode\\n\\\`\\\`\\\`\"}]
           }
           
           RULES:
-          - 'path' must match exactly a file path from the diff (e.g., 'src/api/chatsvc-api.ts')
-          - 'line' MUST be a line number VISIBLE in the diff output - either a changed line (with + prefix) or context line (with space prefix). GitHub rejects comments on lines not shown in the diff!
-          - Look at the actual line numbers shown after @@ in the diff hunks. Only use those lines.
-          - Use 'verdict': 'approve' if code is good, 'request_changes' for blocking issues, 'comment' for suggestions
-          - comments array can be empty if no inline feedback needed
-          - Be constructive and specific. Focus on meaningful improvements, not style nitpicks.
-          
-          IMPORTANT: Write valid JSON to review-output.json using the file write tool."
+          - 'line' MUST be visible in diff (+ or space prefix lines only). Check @@ line numbers.
+          - 'path' must match diff exactly
+          - Empty comments array is fine if nothing substantive to say
+          - Each comment: state issue, suggest fix. No preamble."
 
       - name: Post review with inline comments
         if: github.event_name == 'pull_request'
@@ -207,9 +193,9 @@ jobs:
           
           # Add verdict emoji to the summary
           case "$VERDICT" in
-            APPROVE) VERDICT_PREFIX="🚀 **Don't Panic - This is ready to ship!**" ;;
-            REQUEST_CHANGES) VERDICT_PREFIX="🔧 **Mostly Harmless, but...**" ;;
-            *) VERDICT_PREFIX="🤔 **A few thoughts from the Guide...**" ;;
+            APPROVE) VERDICT_PREFIX="✅" ;;
+            REQUEST_CHANGES) VERDICT_PREFIX="🔧" ;;
+            *) VERDICT_PREFIX="💬" ;;
           esac
           
           # Build the review body, including any comments that couldn't be posted inline
@@ -286,23 +272,15 @@ jobs:
         env:
           CURSOR_API_KEY: ${{ secrets.CURSOR_API_KEY }}
         run: |
-          cursor-agent -p "You are a brilliant code reviewer who happens to be a massive fan of Douglas Adams and The Hitchhiker's Guide to the Galaxy. You're the fun one in the office - warm, witty, and genuinely helpful. You're never defensive about your opinions and you're quick to acknowledge when someone makes a good point.
+          cursor-agent -p "Respond to PR comment. Be brief. No defensiveness - concede good points quickly.
 
-          PR Title: $PR_TITLE
-          Comment from @$COMMENT_USER:
-          $COMMENT_BODY
-
-          The PR diff is in pr-diff.txt if you need context.
-
-          Provide a helpful, friendly response. You might:
-          - Answer questions about your previous review
-          - Clarify your suggestions  
-          - Acknowledge if the commenter makes a good point (you're not precious about your opinions)
-          - Provide additional context or alternatives
-
-          If the comment doesn't require a response (e.g., just 'thanks' or 'done'), write 'NO_RESPONSE_NEEDED' to response-output.md and nothing else.
+          PR: $PR_TITLE
+          @$COMMENT_USER says: $COMMENT_BODY
           
-          Otherwise, write your complete response to response-output.md using the file write tool."
+          Diff in pr-diff.txt if needed.
+
+          If no response needed ('thanks', 'done', etc), write only 'NO_RESPONSE_NEEDED' to response-output.md.
+          Otherwise, write a short, direct response to response-output.md. Max 2-3 sentences unless complexity demands more."
 
       - name: Post response comment
         if: github.event_name != 'pull_request' && steps.check-bot.outputs.is_bot != 'true'
